# TerminalChat

./: .editorconfig  .gitattributes  CMakeLists.txt  win_cmake.cmd
client/: CMakeLists.txt  main.cpp  pch.h
client/src/: Application.cpp  Application.h  NetClient.cpp  NetClient.h
common/: CMakeLists.txt  pch.h
common/include/: Common.h  CommonApi.h  Utils.h
common/include/Common/: Common.h  Queue.h  Utils.h
common/src/: Utils.cpp
net/: CMakeLists.txt  pch.h
net/include/: ClientInterface.h  Connection.h  Message.h
net/include/Net/: Connection.h  Message.h
server/: CMakeLists.txt  main.cpp  pch.h
